trunk/Archive2/5c/34b37c32fd660b/output
main.cpp: In instantiation of 'struct data_structure<no_default>':
main.cpp:43:32:   required from here
main.cpp:19:5: error: static assertion failed: Data Structure requires default-constructible elements
     static_assert(std::is_default_constructible<T>::value,
     ^
main.cpp: In function 'int main()':
main.cpp:42:25: warning: unused variable 'ds_ok' [-Wunused-variable]
     data_structure<int> ds_ok;
                         ^
main.cpp:43:32: warning: unused variable 'ds_error' [-Wunused-variable]
     data_structure<no_default> ds_error; // 2
                                ^
main.cpp: In instantiation of 'void swap(T&, T&) [with T = no_copy]':
main.cpp:40:20:   required from here
main.cpp:6:5: error: static assertion failed: Swap requires copying
     static_assert(std::is_copy_constructible<T>::value,
     ^
main.cpp:11:14: error: use of deleted function 'no_copy::no_copy(const no_copy&)'
     auto c = b;
              ^
main.cpp:25:5: note: declared here
     no_copy ( const no_copy& ) = delete;
     ^
